changes names  add j

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
     <title>Tic Tac Toe</title>
   <body>
-      <h1>TIC TAC TOC GAME by Julio,"special colaboration by Caleb"!!!!</h1>
+      <h1>TIC TAC TOC GAME by Julio,"special colaboration by Caleb and Jordan"!!!!</h1>
 <div id="message">Start playing!!!!!</div>
     <table border="20">
       <tr>
